# tensorfeed

./: .gitignore  AGENT-PAYMENTS-PHASE-0-SPEC.md  AGENT-PAYMENTS-SPEC.md  CLAUDE.md  README.md  SECURITY.md  SUBMISSIONS.md  TENSORFEED-DESIGN-FACELIFT-SPEC.md  TENSORFEED-UPDATE-SPEC.md  package-lock.json  package.json  tailwind.config.ts
.claude/: settings.local.json
.husky/: pre-commit
data/: agents-directory.json  ai-infrastructure-projects.json  articles.json  benchmarks.json  cve-incidents.json  gear.json  harnesses.json  huggingface-dataset-readme.md  page-freshness.json  premium-catalog.json  pricing.json  sources.json  timeline.json
docs/: ARCHITECTURE.md  WRITING.md  restore-from-backup.md
extension/: bg.js  manifest.json  popup.html  popup.js
functions/: _classification.ts  _middleware.ts
mcp-server/: CHANGELOG.md  Dockerfile  README.md  manifest.json  package-lock.json  package.json  server.json  tsconfig.json
public/: _headers  _redirects  agents.txt  ai-api-pricing-guide.md  ai.txt  best-ai-chatbots.md  best-ai-tools.md  best-open-source-llms.md  feed.json  feed.xml  llms-full.txt  llms.txt  openapi.json  openapi.yaml  originals.xml  postman-collection.json  robots.txt  what-are-ai-agents.md  what-is-ai.md
scripts/: add-sharebar-to-originals.mjs  biweekly-agents-directory-check.mjs  biweekly-ai-policy-check.mjs  build-research-firehose.py  build-security-xsource-data.py  check-originals-sync.mjs  convert-whitepaper.py  download-gear-images.mjs  fetch-feeds.ts  freshness-audit.mjs  generate-crawler-domains.ts  generate-gear-api.ts  generate-llms-full.ts  generate-mcp-key.py  generate-og-shims.ts  generate-premium-catalog.ts  install-mcp-publisher.ps1  mcp-publish.ps1  originals-factcheck-targets.ts  patch-openapi-free-security.mjs  patch-openapi-payment-info.mjs  push-to-huggingface.py  refresh-merchant-lists.mjs  refresh-merchant-lists.test.mjs  sync-x402-manifest.ts  (+5 more)
sdk/python/: CHANGELOG.md  README.md  pyproject.toml
sdk/python/examples/: auto_purchase.py  quickstart.py
sdk/python/tensorfeed/: __init__.py  _premium_tools.py  client.py  crewai.py  langchain.py  llamaindex.py  web3_signer.py
sdk/python/tests/: test_premium_tools.py  test_route_verdict.py
(+1428 files in other folders)
